# SiFi-CM-Python

./: .gitignore  MANIFEST.in  README.md  setup.cfg
demo/hypmed/: hypmed_analysys_complete.ipynb
scripts/: phasespace_to_tsv.py
sifi_cm/: 1DCM_data.py  data_1DCM.py  data_fit.py  data_process.py  distal.py  functions.py  hypmed.py  mura.py  root_aux.py
sifi_cm/data/hypmed/: crystal_v2.root  preprocess_data_normalized.pkl  reconstructed_data.pkl
sifi_cm/deprecated/: analyze_reco_1d.py
work/large_det_1d/: phasespace.ipynb
