[metadata]
name = sifi_cm
version = 0.1.1
author = Vitalii Urbanevych
author_email = vitaliyurbanevich@gmail.com
description = Reconstruction and analysis of SiFi-CC data in Coded Mask mode
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires = 
    uproot
    pandas
    tqdm
    matplotlib
    scipy
include_package_data = True
